--- a/src/styles/media-block-header-one.less
+++ b/src/styles/media-block-header-one.less
@@ -2,15 +2,14 @@
 @media (min-width: 668px) and (max-width: 940px) {
     body {
         header {
-            .headerOne {
+            .block-header-one{
                 padding: 0px 25px 0px 25px; 
-                .wrapper {
-                    .mobile-menu {  
+                .quick-contact {
+                    .contact-menu {  
                         flex-direction: column;
                     }
                 }
-                .shopping_basket {
-                   
+                .shopping-basket {
                     margin-right: -7%;
                 }    
             }
@@ -21,35 +20,32 @@
 @media (min-width: 451px) and (max-width: 667px) {
     body {
         header {
-            .headerOne {
+            .block-header-one {
                 padding: 0px 3px 0px 3px;
-                .wrapper {
+                .quick-contact {
                     position: absolute;
                     margin: 107px 0px 0px 0%;
                     z-index: 88888;
-                    .mobile-menu {
+                    .contact-menu {
                         background: @color_blue_main;
                         padding: 8px 5px 8px 5px; 
                         border-radius: 5px;
                         border: solid 1px @color_fon_logo;////цвет под логотип
-                        .mobile-menu-li {
-                            .mobile-menu-a_one {  
+                        .contact-menu-li {
+                            .contact-menu-a {  
                                 font-size: @font-size_main - 1px;  
-                            }
-                            .mobile-menu-a_two {
-                                font-size: @font-size_main - 1px;
                             }
                         }
                     }
                 }
-                .language_selection {
+                .language-selection {
                     margin-left: -7%;
                 }
-                .shopping_basket {
+                .shopping-basket {
                     margin-right: -7%;
                     .cart {
                         padding: 2px; 
-                        .a_cart {
+                        .cart-a {
                             .cart-block {
                                 width: 114px;
                                 font-size: @font-size_main - 3px;
@@ -77,35 +73,32 @@
 @media all and (max-width: 450px) {
     body {
         header {
-            .headerOne {
+            .block-header-one {
                 padding: 0px 3px 0px 3px;
-                .wrapper {
+                .quick-contact {
                     position: absolute;
                     margin: 107px 0px 0px 0%;
                     z-index: 88888;
-                    .mobile-menu {
+                    .contact-menu {
                         background: @color_blue_main;
                         padding: 8px 5px 8px 5px; 
                         border-radius: 5px;
                         border: solid 1px @color_fon_logo;////цвет под логотип
-                        .mobile-menu-li {
-                            .mobile-menu-a_one {
-                                font-size: @font-size_main - 2px;
-                            }
-                            .mobile-menu-a_two {
+                        .contact-menu-li {
+                            .contact-menu-a {
                                 font-size: @font-size_main - 2px;
                             }
                         }
                     }
                 }
-                .language_selection {
+                .language-selection {
                     margin-left: -7%;
                 }
-                .shopping_basket {
+                .shopping-basket {
                     margin-right: -7%;
                     .cart {
                         padding: 2px; 
-                        .a_cart {
+                        .cart-a {
                             .cart-block {
                                 display: none;
                             }
