--- a/src/styles/media-block-header-two.less
+++ b/src/styles/media-block-header-two.less
@@ -2,16 +2,16 @@
 @media (min-width: 375px) and (max-width: 450px) {
     body {
         header {
-            .headerTwo {
-                .container_slider_css {
+            .block-header-two {
+                .container-slider {
                     #logo { 
-                        .logo_a {  
-                            .title_logo { 
+                        a {  
+                            .block-logo { 
                                 margin: 50px 0 0 10px;
                             } 
                         }
                     }
-                    #search_search {
+                    #search {
                         .search-box {
                             .search-txt {
                                 min-width: 310px;
@@ -31,16 +31,16 @@
 @media all and (max-width: 374px) {
     body {
         header {
-            .headerTwo {
-                .container_slider_css {
+            .block-header-two {
+                .container-slider {
                     #logo { 
-                        .logo_a {  
-                            .title_logo { 
+                        a {  
+                            .block-logo { 
                                 margin: 50px 0 0 -18px;
                             } 
                         }
                     }
-                    #search_search {
+                    #search {
                         .search-box {
                             .search-txt {
                                 min-width: 250px;
