--- a/src/styles/media-footer.less
+++ b/src/styles/media-footer.less
@@ -1,7 +1,7 @@
 
 @media all and (max-width: 598px) {
     body {
-        .main-footer{ 
+        .footer{ 
             .container {
                 .box {
                     margin: 0px 0px;
