--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -7,7 +7,7 @@ body {
     padding: 0;
     flex-direction: column;
     align-items: center;
-    .main-footer{ 
+    .footer{ 
         padding: 0;
         margin: 0;
         width: 100%;
