--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,42 +34,10 @@
 // Black 900 // Black 900 italic
 
 
-// * {
-//   color: #ece493;////133026
-//   color: #84a1be;
-//   color: #5c7893;
-//   color: #535962;
-// }
 
 
-// * {
-//   color: #2b4450;/////39317
-//   color: #497285;
-//   color: #dfebed;
-//   color: #f78536;
-// }
 
-// * {
-//   color: #2f3c4f;//////39601
-//   color: #506e86;
-//   color :#fcb040;
-//   color: #de703b;
-// }
-
-// * {
-//     color: #233142;//////123973
-//     color: #455d7a;
-//     color :#f95959;
-//     color: #facf5a;
-//   }
-
-// * {
-//   color: #497285;////////////////////////////// ++++++
-//   color: #ffd000;
-// }
-
-
-/* menu-headerone */
+/* block-header-one */
 @font-size_main: 17px;
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
@@ -77,7 +45,7 @@
 @color_fon_logo: #fcf8ec;////цвет под логотип
 
 
-/* menu-headertwo */
+/* block-header-two */
 @font-size_main: 17px;
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
@@ -85,7 +53,7 @@
 @color_fon_logo: #fcf8ec;////цвет под логотип
 
 
-/* mein-menu-block */
+/* block-header-three */
 @font-size_main: 17px;
 @color_black_main: #222222;
 @color_gray_tone_one_main:  #b8b8b8;  // border
@@ -99,7 +67,7 @@
 @color_dlue_tone_three_main: #5b8ab6; // уровень 2
 
 
- /* main-content-block */
+ /* main-aa */
 @font-size_main: 17px;
 @color_black_main: #222222;
 @color_white_main: #f5f6fa;
@@ -108,7 +76,7 @@
 @color_linear_main: #dcdde1;// цвет линия
 
 
-/*  main-footer  */
+/* footer  */
 @font-size_main: 17px;
 @color_black_main: #222222;
 @color_white_main: #f5f6fa;
@@ -129,17 +97,17 @@
 }
 
 
-@import url('main-headerone.less');
-@import url('main-headertwo.less');
-@import url('main-menu-block.less');
-@import url('main-content-block.less');
-@import url('main-footer.less');
+@import url('block-header-one.less');
+@import url('block-header-two.less');
+@import url('block-header-three.less');
+@import url('main-aa.less');
+@import url('footer.less');
 
 
-@import url('main-media-headerone.less');
-@import url('main-media-headertwo.less');
-@import url('main-media-menu-block.less');
-@import url("main-media-content-block.less");
-@import url("main-media-footer.less");
+@import url('media-block-header-one.less');
+@import url('media-block-header-two.less');
+@import url('media-block-header-three.less');
+@import url("media-main-aa.less");
+@import url("media-footer.less");
 
 
