--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -159,10 +159,10 @@ body {
             overflow: hidden;
             p {
                 color: @color_white_main;
-                .author_text_one {
+                .author-text-one {
                     color: @color_dlue_tone_five_main;  
                 }
-                .author_text_two {
+                .author-text-two {
                     color: @color_red_main;
                 }
             }
