--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,59 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-// font-family: 'K2D Bold', sans-serif;//
-//
-// Thin 100 / Thin 100 italic 
-// Extra-light 200 / Extra-light 200 italic 
-// Light 300 / Light 300 italic 
-// Regular 400 / Regular 400 italic
-// Medium 500 / Medium 500 italic
-// Semi-bold 600 / Semi-bold 600 italic
-// Bold 700 / Bold 700 italic
-// Extra-bold 800 / Extra-bold 800 italic
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-// font-family: 'Roboto', sans-serif;
-//
-// Thin 100 / Thin 100 italic 
-// Light 300 / Light 300 italic 
-// Regular 400 / Regular 400 italic
-// Medium 500 / Medium 500 italic
-// Bold 700 / Bold 700 italic
-// Black 900 // Black 900 italic
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-// font-family: 'Montserrat', sans-serif;
-//
-// Thin 100 / Thin 100 italic 
-// Extra-light 200 / Extra-light 200 italic 
-// Light 300 / Light 300 italic 
-// Regular 400 / Regular 400 italic
-// Medium 500 / Medium 500 italic
-// Semi-bold 600 / Semi-bold 600 italic
-// Bold 700 / Bold 700 italic
-// Extra-bold 800 / Extra-bold 800 italic
-// Black 900 // Black 900 italic
 
-
-
-
-
-/* block-header-one */
-@font-size_main: 17px;
-@color_white_main: #f5f6fa;
-@color_yellow_main: #ffd000;
-@color_blue_main: #45698b;
-@color_fon_logo: #fcf8ec;////цвет под логотип
-
-
-/* block-header-two */
-@font-size_main: 17px;
-@color_white_main: #f5f6fa;
-@color_yellow_main: #ffd000;
-@color_blue_main: #45698b;
-@color_fon_logo: #fcf8ec;////цвет под логотип
-
-
-/* block-header-three */
+/* header */
 @font-size_main: 17px;
 @color_black_main: #222222;
 @color_gray_tone_one_main:  #b8b8b8;  // border
@@ -65,16 +14,15 @@
 @color_dlue_tone_one_main: #c8e5ff; // уровень 3 при hover
 @color_dlue_tone_two_main: #84c4ff; // уровень 3
 @color_dlue_tone_three_main: #5b8ab6; // уровень 2
+@color_fon_logo: #fcf8ec;////цвет под логотип
 
-
- /* main-aa */
+ /* page-main-aa */
 @font-size_main: 17px;
 @color_black_main: #222222;
 @color_white_main: #f5f6fa;
 @color_yellow_main: #ffd000;
 @color_blue_main: #45698b;
 @color_linear_main: #dcdde1;// цвет линия
-
 
 /* footer  */
 @font-size_main: 17px;
@@ -87,27 +35,18 @@
 @color_red_main: crimson;
 
 
-
-
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-
-@import url('block-header-one.less');
-@import url('block-header-two.less');
-@import url('block-header-three.less');
-@import url('main-aa.less');
+@import url("header.less");
+@import url('page-main-aa.less');
 @import url('footer.less');
 
-
-@import url('media-block-header-one.less');
-@import url('media-block-header-two.less');
-@import url('media-block-header-three.less');
-@import url("media-main-aa.less");
+@import url("media-header.less");
+@import url("media-page-main-aa.less");
 @import url("media-footer.less");
 
 
