--- a/src/styles/media-page-main-aa.less
+++ b/src/styles/media-page-main-aa.less
@@ -1,103 +1,102 @@
 @media all and (max-width: 598px) {
     body {
-        .main__aa { 
-            .aa__crumbs {
+        .page-main-aa { 
+            .aa-crumbs {
                 padding: 15px 20px 15px 20px;
-                .aa__crumbs_text {
+                .aa-crumbs-text {
                     a {
                     font-size: @font-size_main - 3px;//////////???
                     }
                 }
             }
-            .aa__content1 {
-                .aa__c1_text_one {    
+            .aa-content1 {
+                .aa-c1-text-one {    
                     font-size: @font-size_main + 10px;
                 }
-                .aa__c1_text_two {
+                .aa-c1-text-two {
                     padding: 20px 20px 20px 20px;
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content2 {
-                .aa__c2_section1 {
-                    a .aa__c2s1_block2 {
-                        .aa__c2s1b2_text {
+            .aa-content2 {
+                .aa-c2-section {
+                    a .aa-c2s-block2 {
+                        .aa-c2sb2-text {
                             font-size: @font-size_main - 2px; 
                         } 
                     }     
                 }
             }
-            .aa__content3 {
-                .aa__c3_text_one {
+            .aa-content3 {
+                .aa-c3-text-one {
                     font-size: @font-size_main + 10px;
                 }
-                .aa__c3_text_two {
+                .aa-c3-text-two {
                     padding: 20px 20px 20px 20px;
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content4{
-                .aa__c4_section1 {
-                    a .aa__c4s1_block2 {
-                        .aa__c4s1b2_text {
-                            padding: 6px 0px 5px 0px;
+            .aa-content4 {
+                .aa-c4-section {
+                    a .aa-c4s-block2 {
+                        .aa-c4sb2-text {
                             font-size: @font-size_main - 2px;
                         }
                     }     
                 }
             }
-            .aa__content4_button {
-                .button_catalog {
+            .aa-content4-button {
+                .button-catalog {
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content5 {
-                .aa__c5_text_one {
+            .aa-content5 {
+                .aa-c5-text-one {
                     font-size: @font-size_main + 10px;
                 }
-                .aa__c5_text_two {
+                .aa-c5-text-two {
                     padding: 20px 20px 20px 20px;
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content6 {
+            .aa-content6 {
                 .aa__c6_content6 {
-                    .aa__c6c6_section1 {
+                    .aa-c6c6-section {
                         a {
-                            .aa__c6c6s1_text_one {
+                            .aa-c6c6s-text-one {
                                 font-size: @font-size_main + 6px;
                             }
-                            .aa__c6c6s1_block1 {   
+                            .aa-c6c6s-block {   
                                 margin: -5px 0px -4px 0px;  
                                 .fa-star {
                                     font-size: @font-size_main - 12px;  
                                 }
                             }
-                            .aa__c6c6s1_text_two{
+                            .aac6c6s-text-two{
                                 font-size: @font-size_main - 2px;
                             }
                         }
                     } 
                 }
             }
-            .aa__content6_button {
-                .button_partsList {
+            .aa-content6-button {
+                .button-partsList {
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content7 {
-                .aa__c7_text_one {
+            .aa-content7 {
+                .aa-c7-text-one {
                     font-size: @font-size_main + 10px;
                 }
-                .aa__c7_text_two {
+                .aa-c7-text-two {
                     padding: 20px 20px 20px 20px;
                     font-size: @font-size_main - 2px;
                 }
             }
-            .aa__content8 {
-                .aa__c8_section1 {
-                    a .aa__c8s1_block2 {
-                        .aa__c8s1b2_text_one {
+            .aa-content8 {
+                .aa-c8-section {
+                    a .aa-c8s-block2 {
+                        .aa-c8sb2-text {
                             font-size: @font-size_main - 2px;
                         }
                     }     
