--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -43,10 +43,14 @@
 
 @import url("header.less");
 @import url('page-main-aa.less');
+@import url("page-parts-list-brand-bb.less");
+@import url("page-catalog-pdf-cc.less");
 @import url('footer.less');
 
 @import url("media-header.less");
 @import url("media-page-main-aa.less");
+@import url("media-page-parts-list-brand-bb.less");
+@import url("media-page-catalog-pdf-cc.less");
 @import url("media-footer.less");
 
 
