--- a/src/styles/media-page-parts-list-pdf.less
+++ b/src/styles/media-page-parts-list-pdf.less
@@ -1,25 +1,7 @@
+
 @media all and (max-width: 727px) {
     body {
-        .page-parts-list-pdf { 
-            .crumbs {
-                padding: 15px 20px 15px 20px;
-                .crumbs-text {
-                    a {
-                    font-size: @font-size_main - 5px;
-                    }
-                }
-            }
-            .content1-description {
-                .content1-description-title {
-                    font-size: @font-size_main + 8px;
-                }
-                .content1-description-text{
-                    text-indent: 0px;
-                    padding: 20px 15px 20px 15px;
-                    font-size: @font-size_main - 2px;
-                    text-align: center;
-                }
-            }
+        .page-parts-list-pdf {
             .content2-list {
                 .content2-list-title {  
                     font-size: @font-size_main + 2px;
@@ -51,6 +33,33 @@
                         }  
                     }  
                 }   
+            }
+
+        }
+    }
+} 
+
+@media all and (max-width: 599px) {
+    body {
+        .page-parts-list-pdf { 
+            .crumbs {
+                padding: 15px 20px 15px 20px;
+                .crumbs-text {
+                    a {
+                    font-size: @font-size_main - 5px;
+                    }
+                }
+            }
+            .content1-description {
+                .content1-description-title {
+                    font-size: @font-size_main + 8px;
+                }
+                .content1-description-text{
+                    text-indent: 0px;
+                    padding: 20px 15px 20px 15px;
+                    font-size: @font-size_main - 2px;
+                    text-align: center;
+                }
             }
             .helpful {
                 .helpful-description {
