--- a/src/styles/page-parts-list-pdf.less
+++ b/src/styles/page-parts-list-pdf.less
@@ -246,7 +246,7 @@ body {
                 justify-content: space-around;      
                 align-items: center;
                 .helpful-menu-section {
-                    height: 75px;
+                    height: 95px;
                     max-width: 310px;
                     margin: 10px 20px 25px 20px;
                     display: flex;
@@ -262,7 +262,7 @@ body {
                         text-decoration: none;
                     }
                     a .menu-block-img {
-                        height: 55px;
+                        height: 75px;
                         width: 310px;
                         display: inline-block;
                         overflow: hidden;
@@ -270,11 +270,11 @@ body {
                         justify-content: center; /*центрируем элемент по горизонтали */
                         align-items: center; /* и вертикали */     
                         .helpful-menu-img {
-                            height: 55px;
+                            height: 75px;
                             height: 100%;
-                            padding-top: 2px;
+                            padding-top: 4px;
                             object-fit: cover;
-                            transform: scaleX(1.4);
+                            transform: scaleX(1.18);
                             display: block;
                             -webkit-filter: grayscale(100%);
                             -moz-filter: grayscale(100%);
@@ -296,11 +296,11 @@ body {
                         line-height: 20px;
                         .helpful-menu-text {
                             text-align: center;
-                            color: @color_black_main;
+                            color: @color_blue_main;;
                             text-transform: uppercase;
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: @font-size_main;
+                            font-size: @font-size_main - 1px;
                             letter-spacing: 0px;
                             word-spacing: 3px;
                             transition: linear 0.5s;
