--- a/src/styles/page-parts-list-pdf.less
+++ b/src/styles/page-parts-list-pdf.less
@@ -184,6 +184,89 @@ body {
                 }  
             }   
         }
+        .pagination-section {
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 80px;
+            width: 100%;
+            max-width: 1260px;
+            align-items: center;
+            justify-content: center;
+            margin-top: 0px;
+            .pagination-wrapper {
+                min-width: 1px;
+                min-height: 1px;
+
+                .pagination {
+                    padding: 0;
+                    margin: 0;
+                    border: 0;
+                    // display: inline-block;
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: center;
+                    justify-content: center;
+                    
+                    a {
+                        
+                        // float: left;
+                        // list-style-type: none;
+                        // background-color: rgb(251, 146, 27);
+                        // border: 1px solid rgb(255, 1, 1);
+                       
+                        background-color: @color_linear_main;
+                        margin: 2px 2px 2px 2px;
+                        text-align: center;
+                        text-decoration: none;;
+                        div {
+                            height: 30px;
+                            line-height: 30px;
+                            min-width: 30px;
+                            // padding: 8px 8px;
+                            text-decoration: none;
+                            // border: 1px solid rgb(1, 5, 255);
+                            color: @color_blue_main;
+                            text-transform: uppercase;
+                            font-family: 'Roboto', sans-serif;
+                            font-weight: 400;
+                            font-size: @font-size_main;
+                           
+                        }
+                        
+                    }
+                    .active {
+                        background-color: @color_dlue_tone_three_main;
+                        
+                        .active-block {
+                            color: @color_white_main;
+                            font-size: @font-size_main + 1px;
+                            font-weight: 500;
+
+                        }
+                    }
+                    .space {
+                        height: 30px;
+                        line-height: 30px;
+                        min-width: 30px;
+                        margin: 2px 2px 2px 2px;
+                        background: @color_white_main;
+                        
+                    }
+                    a:hover {
+                        background-color: @color_dlue_tone_three_main;
+                    }
+                    a:hover div {
+                        // color: @color_yellow_main;
+                        color: @color_white_main;
+                        font-size: @font-size_main + 1px;
+                        font-weight: 500;
+                        
+                    }
+                }
+            }
+        }
         .helpful {
             .helpful-description {
                 padding: 0;
