--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -10,6 +10,7 @@ body {
     .footer{ 
         padding: 0;
         margin: 0;
+        min-height: 1px;
         width: 100%;
         width: 100vw;
         background: @color_blue_main;
