--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -46,6 +46,7 @@
 @import url("page-parts-list-brand.less");
 @import url("page-parts-list-pdf.less");
 @import url("page-catalog-pdf.less");
+@import url("page-array-product-cards.less");
 @import url('footer.less');
 
 @import url("media-header.less");
@@ -53,6 +54,7 @@
 @import url("media-page-parts-list-brand.less");
 @import url("media-page-parts-list-pdf.less");
 @import url("media-page-catalog-pdf.less");
+@import url("media-page-array-product-cards.less");
 @import url("media-footer.less");
 
 
